2005-12-08  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkTextTag.c (TkTextTagCmd): use correct arraySize for
	peered text widgets in [$text tag names]. [Bug 1375069 1374935]

2005-12-08  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDraw.c:  remove inclusion of tclInt.h and use of tcl
	* macosx/tkMacOSXFont.c:  internals wherever possible in tk/macosx, the
	* macosx/tkMacOSXInit.c:  only remaining tcl internals in TkAqua are
	* macosx/tkMacOSXNotify.c: TclServiceIdle() in tkMacOSXScrlbr.c and
	* macosx/tkMacOSXScrlbr.c: Tcl_Get/SetStartupScript() in tkMacOSXInit.c
				   [Bug 1336531].

	* macosx/tkMacOSXInt.h: sync comments with core-8-4-branch.

2005-12-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixEvent.c (OpenIM): remove extraneous const

2005-12-06  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* doc/ConfigWidg.3 (TK_CONFIG_OPTION_SPECIFIED): Mentioned that the
	flag is deprecated because it is not thread-safe.

2005-12-05  Reinhard Max  <max@suse.de>

	* unix/tkUnixEvent.c (OpenIM): Added a workaround to allow at
	least ASCII and the Compose key when typing into text and entry
	widgets on a system that uses SCIM. This has to be taken out again
	once the SCIM problems have been fixed.

2005-12-01  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (Darwin): fixed error when MACOSX_DEPLOYMENT_TARGET unset
	* unix/configure: regen.

2005-11-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (WmAttributesCmd): set (no)topmost window aspect
	before rewrapping.  [Bug 1086049]

	* macosx/tkMacOSXXStubs.c (TkpOpenDisplay, TkMacOSXDisplayChanged):
	* macosx/tkMacOSXWindowEvent.c (TkMacOSXProcessApplicationEvent):
	* macosx/tkMacOSXCarbonEvents.c (TkMacOSXInitCarbonEvents):
	* macosx/tkMacOSXEvent.h: Trap kEventAppAvailableWindowBoundsChanged
	* macosx/tkMacOSXInt.h:   event to watch for change in display size
	and adjust internal state appropriately.

	* doc/checkbutton.n: fix -selectcolor docs [Bug 1083838]
