@@ -3,7 +3,7 @@
 # generate the file "configure", which is run during Tk installation
 # to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.61 2005/08/23 18:25:34 mdejong Exp $
+# RCS: @(#) $Id: configure.in,v 1.62 2005/12/08 20:25:42 hobbs Exp $
 
 AC_INIT(../generic/tk.h)
 AC_PREREQ(2.59)
@@ -221,6 +221,17 @@ else
     TK_RES='tk.$(RES)'
 fi
 
+# The wish.exe.manifest requires these
+# TK_WIN_VERSION is the 4 dotted pair Windows version format
+case "$TK_PATCH_LEVEL" in
+     a*) TK_WIN_VERSION="$TK_VERSION.0.`echo $TK_PATCH_LEVEL | tr -d a`" ;;
+     b*) TK_WIN_VERSION="$TK_VERSION.1.`echo $TK_PATCH_LEVEL | tr -d b`" ;;
+     .*) TK_WIN_VERSION="$TK_VERSION.2$TK_PATCH_LEVEL" ;;
+esac
+AC_SUBST(TK_WIN_VERSION)
+# X86|AMD64|IA64 for manifest
+AC_SUBST(MACHINE)
+
 AC_SUBST(TK_VERSION)
 AC_SUBST(TK_MAJOR_VERSION)
 AC_SUBST(TK_MINOR_VERSION)
@@ -295,4 +306,4 @@ AC_SUBST(TK_BUILD_STUB_LIB_PATH)
 AC_SUBST(TK_CC_SEARCH_FLAGS)
 AC_SUBST(TK_LD_SEARCH_FLAGS)
 
-AC_OUTPUT(Makefile tkConfig.sh)
+AC_OUTPUT([Makefile tkConfig.sh wish.exe.manifest])
